<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<!--    Este XML representa um item da RecyclerView no Fragmento Home. -->
<!--    TODO: Adicionar os DataBindings-->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/card_corner_radius"
        android:elevation="@dimen/card_elevation"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_marginStart="@dimen/card_margin"
        android:layout_marginEnd="@dimen/card_margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:backgroundTint="@color/cardAcquaGreen"
        app:layout_constraintDimensionRatio="25:9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_padding"
            >

            <ImageButton
                android:id="@+id/itemShareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="?attr/actionBarItemBackground"
                app:tint="@color/cardTextColor" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itemNomeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_text_top_margin"
                tools:text="@string/nome_placeholder"
                android:textColor="@color/cardTextColor"
                style="?attr/textAppearanceSubtitle2"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itemTelefoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cardTextColor"
                tools:text="@string/telefone_placeholder"
                android:layout_marginTop="@dimen/card_text_top_margin"
                style="?attr/textAppearanceSubtitle2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemNomeTv"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itemEmailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cardTextColor"
                tools:text="@string/email_placeholder"
                style="?attr/textAppearanceSubtitle2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemTelefoneTv"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itemEmpresaTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cardTextColor"
                tools:text="@string/empresa_placeholder"
                style="?attr/textAppearanceSubtitle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>